# wicked2nm

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  integration-tests.yml  migrate-wicked-ci.yml  migrate-wicked-integration-tests.yml  obs-build.yml  rust-checks.yml
src/: bond.rs  bridge.rs  infiniband.rs  interface.rs  main.rs  migrate.rs  netconfig.rs  netconfig_dhcp.rs  ovs.rs  reader.rs  team.rs  tuntap.rs  vlan.rs  wireless.rs
tests/: test.sh
tests/autoconnect/: ENV
tests/autoconnect/system-connections/: eth9.nmconnection
tests/autoconnect/wicked_xml/: autoconnect.xml
tests/autoip/netconfig/: ifcfg-en5
tests/autoip/system-connections/: en5.nmconnection
tests/autoip/wicked_xml/: config.xml
tests/autoip_fallback/: ENV
tests/autoip_fallback/system-connections/: en5.nmconnection
tests/autoip_fallback/wicked_xml/: config.xml
tests/autoip_fallback2/: ENV
tests/autoip_fallback2/netconfig/: ifcfg-en5
tests/autoip_fallback2/system-connections/: en5.nmconnection
tests/autoip_fallback2/wicked_xml/: config.xml
tests/bond_active-backup/: ENV
tests/bond_active-backup/netconfig/: dhcp
tests/bond_active-backup/system-connections/: bond0.nmconnection  en0.nmconnection  en1.nmconnection
tests/bond_active-backup/wicked_xml/: config.xml
tests/bond_active-backup2/netconfig/: ifcfg-bond0
tests/bond_active-backup2/system-connections/: bond0.nmconnection  (+2 more)
tests/bond_ieee802_3ad2/: ENV
tests/bridge1/: ENV
tests/bridge2/: ENV
tests/dhcp4_client_id2/: ENV
tests/dhcp4_default_route/: ENV
tests/dhcp_and_static_ip/: ENV
tests/hostname2/: ENV
tests/hostname3/: ENV
tests/hostname4/: ENV
tests/ifsysctl/: ENV
tests/ifsysctl3/: ENV
tests/infiniband/: ENV
tests/mtu/: ENV
tests/multipath_routing_failure/: ENV
tests/netconfig/: ENV
tests/ovs-bridge1/: ENV
tests/ovs-bridge1.1/: ENV
tests/ovs-bridge2/: ENV
tests/ovs-bridge2.1/: ENV
tests/sysctl/: ENV
tests/team_activebackup_notifications/: ENV
tests/team_random2/: ENV
tests/wireless/: ENV
(+277 files in other folders)
