[package]
name = "migrate-wicked"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
quick-xml = { version = "0.28.2", features = ["serialize"] }
agama-lib = { path="../agama-lib" }
regex = "1.9.5"
agama-server = { path="../agama-server" }
cidr = { version = "0.2.2", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive", "wrap_help", "env"] }
anyhow = "1.0.71"
log = "0.4"
simplelog = "0.12.1"
strum = "0.25.0"
strum_macros = "0.25.2"
serde_with = "3.3.0"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
serde_ignored = "0.1.9"
uuid = { version = "1.3.4", features = ["v4"] }
macaddr = "1.0"
dotenv = "0.15.0"

[[bin]]
name = "migrate-wicked"
path = "src/main.rs"
