[package]
name = "wicked2nm"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
quick-xml = { version = "0.28.2", features = ["serialize"] }
agama-network = { git = "https://github.com/agama-project/agama" }
regex = "1.9.5"
cidr = { version = "0.3.1", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive", "wrap_help", "env"] }
anyhow = "1.0.71"
log = "0.4"
simplelog = "0.12.1"
strum = "0.25.0"
strum_macros = "0.25.2"
serde_with = "3.3.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
serde_ignored = "0.1.9"
uuid = { version = "1.3.4", features = ["v4"] }
macaddr = "1.0"
dotenv = "0.15.0"
serde_path_to_error = "0.1.16"
globset = { version = "0.4.16", default-features = false }

[dev-dependencies]
testing_logger = "0.1.1"

[[bin]]
name = "wicked2nm"
path = "src/main.rs"
